--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/core": "^6.1.10",
+    "@mikro-orm/nestjs": "^5.2.3",
+    "@mikro-orm/sqlite": "^6.1.10",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
