--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mikro-orm/core": "^6.1.10",
+    "@mikro-orm/migrations": "^6.1.10",
     "@mikro-orm/nestjs": "^5.2.3",
     "@mikro-orm/sqlite": "^6.1.10",
     "@nestjs/common": "^10.0.0",
