--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^6.1.10",
     "@mikro-orm/core": "^6.1.10",
     "@mikro-orm/migrations": "^6.1.10",
     "@mikro-orm/nestjs": "^5.2.3",
