--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@mikro-orm/sqlite": "^6.1.10",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
